--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -11,7 +11,7 @@
 </script>
 {% endblock %}
 {% block content %}
-	{# <span id="test_badge"></span> #}
+	<span id="test_badge"></span>
 	{% block nav %}
 	<logo>
 		GoodCloud
