put env in the templates

--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -12,7 +12,7 @@
 {% endblock %}
 	
 </head>
-{% block body %}<body {% block extra_body %}{% endblock %} >
+{% block body %}<body {% block extra_body %}{% endblock %} env="{{ENV}}">
 	{% block content %}
 
 	{% endblock %}
