--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -6,7 +6,7 @@
 
 	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.js"> </script>
 	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
-
+	<link rel="shortcut icon" href="{{FAVICON_URL}}" />
 {% block head %}
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/main.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
