supported smoke tests that check for titles made sure all pages have titles

--- a/mycelium/apps/import/templates/import/list.html
+++ b/mycelium/apps/import/templates/import/list.html
@@ -1,5 +1,6 @@
 {% extends "import/base.html" %}
 {% load humanize %}
+{% block title %}Data Import - History{% endblock %}
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 
