--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -1,4 +1,5 @@
 {% extends "people/base.html" %}
+{% block title %}People - Search{% endblock %}
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 $(function(){
