--- a/mycelium/apps/import/templates/import/start.html
+++ b/mycelium/apps/import/templates/import/start.html
@@ -1,5 +1,6 @@
 {% extends "import/base.html" %}
 {% load humanize %}
+{% block title %}Data Import - Start a New Data Import{% endblock %}
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 
