--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -1,5 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n cache cms_tags menu_tags thumbnail %}
+{% block title %}GoodCloud: {% page_attribute page_title %}{% endblock %}
 {% block head %}{{block.super}}
 {% endblock %}
 {% block page_content %}
