--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -1,5 +1,6 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n cache cms_tags menu_tags %}
+{% block title %}GoodCloud: {% page_attribute page_title %}{% endblock %}
 {% block head %}{{block.super}}
 <!--[if lt IE 8]>
 <style type="text/css" media="screen">
