--- a/mycelium/apps/reports/templates/reports/detail.html
+++ b/mycelium/apps/reports/templates/reports/detail.html
@@ -1,4 +1,5 @@
 {% extends "reports/base.html" %}
+{% block title %}Reports - Unsaved Report{% endblock %}
 {% load humanize %}
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
