--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -1,4 +1,5 @@
 {% extends "reports/base.html" %}
+{% block title %}Reports - View Saved Reports{% endblock %}
 {% load humanize %}
 {% block head %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
