tweak to more title

--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -1,6 +1,6 @@
 {% extends "mycelium_base.html" %}
 {% load i18n generic_fields friendly_data_formatting %}
-{% block title %}More Tools - Data Import, Account Settings,{% endblock %}
+{% block title %}More Tools - Data Import, Account Settings, and more{% endblock %}
 {% block head %}{{block.super}}
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/more.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
