--- a/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/editable_field.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/template_tags/generic_fields/editable_field.html
@@ -1,6 +1,6 @@
 {% load generic_fields %}{% spaceless %}
 <span class="generic_editable_field" id="container_id_{{field.html_name}}">
 	<span class="view_field">{% if generic_editable_view_override %}{{generic_editable_view_override}}{% else %}{{field|field_value}}{% endif %}</span>
-	<span class="edit_field">{% if generic_editable_edit_override %}{{generic_editable_edit_override}}{% else %}{{field}}{% endif %}</span>
+	<span class="edit_field">{% if generic_editable_edit_override %}{{generic_editable_edit_override}}{% else %}{{field}}{% endif %}<div class="generic_field_label">{{field.label}}</div></span>
 </span>
 {% endspaceless %}
