--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -101,6 +101,7 @@ footer a:hover {
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
+	cursor: pointer;
 /*	box-shadow:		 	1px 1px 2px #454545;
 	-moz-box-shadow:    1px 1px 2px #454545;
 	-webkit-box-shadow: 1px 1px 2px #454545;
