--- a/media/css/main.css
+++ b/media/css/main.css
@@ -228,11 +228,11 @@ input.prefilled.tv-focused {
 	border: 2px solid #0355aa;
 }
 #test_badge {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	background: url("../images/test-badge-right.png");
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	background: url("../images/test-badge-bottom-right.png");
 	width: 150px;
 	height: 150px;
-	z-index: 5;
+	z-index: 5000;
 }
