--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -5,5 +5,8 @@
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/more.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
 {% block page_content %}
-	<a href="{% url import:list %}">Data Import</a>
+	<a href="{% url import:list %}" class="mycelium_btn more_button data_import_btn">
+		<div class="button_title">Data Import</div>
+		<div class="button_description">Import records from other systems into GoodCloud</div>
+	</a>
 {% endblock %}
