fix to footer in firefox, hopefully

--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -76,7 +76,7 @@ body {
 }
 /* Thanks, IE7. */
 #home_layout_columns {
-	position: absolute;
+/*	position: absolute;*/
 	width: 100%;
 	clear: both;
 	top: 100px;
