--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'HattoriHanzoLight';
 	src: url('../fonts/Hattori_Hanzo-webfont.eot');
-	src: local(''), url('../fonts/Hattori_Hanzo-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo-webfont.svg#webfontrd3huYzV') format('svg');
+	src: local('£'), url('../fonts/Hattori_Hanzo-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo-webfont.svg#webfontrd3huYzV') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
 	font-family: 'HattoriHanzoLightItalic';
 	src: url('../fonts/Hattori_Hanzo_Italic-webfont.eot');
-	src: local(''), url('../fonts/Hattori_Hanzo_Italic-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo_Italic-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo_Italic-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Hattori_Hanzo_Italic-webfont.woff') format('woff'), url('../fonts/Hattori_Hanzo_Italic-webfont.ttf') format('truetype'), url('../fonts/Hattori_Hanzo_Italic-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -17,7 +17,7 @@
 @font-face {
 	font-family: 'ComfortaaThin';
 	src: url('../fonts/Comfortaa_Thin-webfont.eot');
-	src: local(''), url('../fonts/Comfortaa_Thin-webfont.woff') format('woff'), url('../fonts/Comfortaa_Thin-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Thin-webfont.svg#webfontGKD5inAq') format('svg');
+	src: local('£'), url('../fonts/Comfortaa_Thin-webfont.woff') format('woff'), url('../fonts/Comfortaa_Thin-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Thin-webfont.svg#webfontGKD5inAq') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -25,7 +25,7 @@
 @font-face {
 	font-family: 'ComfortaaRegular';
 	src: url('../fonts/Comfortaa_Regular-webfont.eot');
-	src: local(''), url('../fonts/Comfortaa_Regular-webfont.woff') format('woff'), url('../fonts/Comfortaa_Regular-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Regular-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Comfortaa_Regular-webfont.woff') format('woff'), url('../fonts/Comfortaa_Regular-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Regular-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -33,7 +33,7 @@
 @font-face {
 	font-family: 'ComfortaaBold';
 	src: url('../fonts/Comfortaa_Bold-webfont.eot');
-	src: local(''), url('../fonts/Comfortaa_Bold-webfont.woff') format('woff'), url('../fonts/Comfortaa_Bold-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Bold-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Comfortaa_Bold-webfont.woff') format('woff'), url('../fonts/Comfortaa_Bold-webfont.ttf') format('truetype'), url('../fonts/Comfortaa_Bold-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -41,7 +41,7 @@
 @font-face {
 	font-family: 'ColaborateThinRegular';
 	src: url('../fonts/ColabThi-webfont.eot');
-	src: local(''), url('../fonts/ColabThi-webfont.woff') format('woff'), url('../fonts/ColabThi-webfont.ttf') format('truetype'), url('../fonts/ColabThi-webfont.svg#webfontcrb0Yhf3') format('svg');
+	src: local('£'), url('../fonts/ColabThi-webfont.woff') format('woff'), url('../fonts/ColabThi-webfont.ttf') format('truetype'), url('../fonts/ColabThi-webfont.svg#webfontcrb0Yhf3') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -49,7 +49,7 @@
 @font-face {
 	font-family: 'ColaborateLightRegular';
 	src: url('../fonts/ColabLig-webfont.eot');
-	src: local(''), url('../fonts/ColabLig-webfont.woff') format('woff'), url('../fonts/ColabLig-webfont.ttf') format('truetype'), url('../fonts/ColabLig-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/ColabLig-webfont.woff') format('woff'), url('../fonts/ColabLig-webfont.ttf') format('truetype'), url('../fonts/ColabLig-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,7 +57,7 @@
 @font-face {
 	font-family: 'ColaborateRegular';
 	src: url('../fonts/ColabReg-webfont.eot');
-	src: local(''), url('../fonts/ColabReg-webfont.woff') format('woff'), url('../fonts/ColabReg-webfont.ttf') format('truetype'), url('../fonts/ColabReg-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/ColabReg-webfont.woff') format('woff'), url('../fonts/ColabReg-webfont.ttf') format('truetype'), url('../fonts/ColabReg-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -65,7 +65,7 @@
 @font-face {
 	font-family: 'ColaborateMediumRegular';
 	src: url('../fonts/ColabMed-webfont.eot');
-	src: local(''), url('../fonts/ColabMed-webfont.woff') format('woff'), url('../fonts/ColabMed-webfont.ttf') format('truetype'), url('../fonts/ColabMed-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/ColabMed-webfont.woff') format('woff'), url('../fonts/ColabMed-webfont.ttf') format('truetype'), url('../fonts/ColabMed-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -73,14 +73,14 @@
 @font-face {
 	font-family: 'ColaborateBoldRegular';
 	src: url('../fonts/ColabBol-webfont.eot');
-	src: local(''), url('../fonts/ColabBol-webfont.woff') format('woff'), url('../fonts/ColabBol-webfont.ttf') format('truetype'), url('../fonts/ColabBol-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/ColabBol-webfont.woff') format('woff'), url('../fonts/ColabBol-webfont.ttf') format('truetype'), url('../fonts/ColabBol-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'CantarellRegular';
 	src: url('../fonts/Cantarell-Regular-webfont.eot');
-	src: local(''), url('../fonts/Cantarell-Regular-webfont.woff') format('woff'), url('../fonts/Cantarell-Regular-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Regular-webfont.svg#webfontaI1yI6ue') format('svg');
+	src: local('£'), url('../fonts/Cantarell-Regular-webfont.woff') format('woff'), url('../fonts/Cantarell-Regular-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Regular-webfont.svg#webfontaI1yI6ue') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -88,7 +88,7 @@
 @font-face {
 	font-family: 'CantarellOblique';
 	src: url('../fonts/Cantarell-Oblique-webfont.eot');
-	src: local(''), url('../fonts/Cantarell-Oblique-webfont.woff') format('woff'), url('../fonts/Cantarell-Oblique-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Oblique-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Cantarell-Oblique-webfont.woff') format('woff'), url('../fonts/Cantarell-Oblique-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Oblique-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -96,7 +96,7 @@
 @font-face {
 	font-family: 'CantarellBold';
 	src: url('../fonts/Cantarell-Bold-webfont.eot');
-	src: local(''), url('../fonts/Cantarell-Bold-webfont.woff') format('woff'), url('../fonts/Cantarell-Bold-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Bold-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Cantarell-Bold-webfont.woff') format('woff'), url('../fonts/Cantarell-Bold-webfont.ttf') format('truetype'), url('../fonts/Cantarell-Bold-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -104,14 +104,14 @@
 @font-face {
 	font-family: 'CantarellBoldOblique';
 	src: url('../fonts/Cantarell-BoldOblique-webfont.eot');
-	src: local(''), url('../fonts/Cantarell-BoldOblique-webfont.woff') format('woff'), url('../fonts/Cantarell-BoldOblique-webfont.ttf') format('truetype'), url('../fonts/Cantarell-BoldOblique-webfont.svg#') format('svg');
+	src: local('£'), url('../fonts/Cantarell-BoldOblique-webfont.woff') format('woff'), url('../fonts/Cantarell-BoldOblique-webfont.ttf') format('truetype'), url('../fonts/Cantarell-BoldOblique-webfont.svg#') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'ExpresswayRegular';
 	src: url('../fonts/expressway_rg-webfont.eot');
-	src: local(''), url('../fonts/expressway_rg-webfont.woff') format('woff'), url('../fonts/expressway_rg-webfont.ttf') format('truetype'), url('../fonts/expressway_rg-webfont.svg#webfont') format('svg');
+	src: local('£'), url('../fonts/expressway_rg-webfont.woff') format('woff'), url('../fonts/expressway_rg-webfont.ttf') format('truetype'), url('../fonts/expressway_rg-webfont.svg#webfont') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -120,7 +120,7 @@
 @font-face {
 	font-family: 'FontinSansRegular';
 	src: url('../fonts/fontin_sans_r_45b-webfont.eot');
-	src: local(''), url('../fonts/fontin_sans_r_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_r_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_r_45b-webfont.svg#webfontCPGluQN9') format('svg');
+	src: local('£'), url('../fonts/fontin_sans_r_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_r_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_r_45b-webfont.svg#webfontCPGluQN9') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -128,7 +128,7 @@
 @font-face {
 	font-family: 'FontinSansBold';
 	src: url('../fonts/fontin_sans_b_45b-webfont.eot');
-	src: local(''), url('../fonts/fontin_sans_b_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_b_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_b_45b-webfont.svg#webfontKVT2dh5P') format('svg');
+	src: local('£'), url('../fonts/fontin_sans_b_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_b_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_b_45b-webfont.svg#webfontKVT2dh5P') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -136,7 +136,7 @@
 @font-face {
 	font-family: 'FontinSansBoldItalic';
 	src: url('../fonts/fontin_sans_bi_45b-webfont.eot');
-	src: local(''), url('../fonts/fontin_sans_bi_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_bi_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_bi_45b-webfont.svg#webfontMJUB6xX4') format('svg');
+	src: local('£'), url('../fonts/fontin_sans_bi_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_bi_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_bi_45b-webfont.svg#webfontMJUB6xX4') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -144,7 +144,7 @@
 @font-face {
 	font-family: 'FontinSansItalic';
 	src: url('../fonts/fontin_sans_i_45b-webfont.eot');
-	src: local(''), url('../fonts/fontin_sans_i_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_i_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_i_45b-webfont.svg#webfont3geGagNS') format('svg');
+	src: local('£'), url('../fonts/fontin_sans_i_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_i_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_i_45b-webfont.svg#webfont3geGagNS') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -152,7 +152,7 @@
 @font-face {
 	font-family: 'FontinSansSmallCaps';
 	src: url('../fonts/fontin_sans_sc_45b-webfont.eot');
-	src: local(''), url('../fonts/fontin_sans_sc_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_sc_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_sc_45b-webfont.svg#webfontaXJUObFg') format('svg');
+	src: local('£'), url('../fonts/fontin_sans_sc_45b-webfont.woff') format('woff'), url('../fonts/fontin_sans_sc_45b-webfont.ttf') format('truetype'), url('../fonts/fontin_sans_sc_45b-webfont.svg#webfontaXJUObFg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
