--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -47,6 +47,7 @@ function rotate_verbs() {
 </script>
 {% endblock %}
 {% block page_content %}
+<div id="home_layout_block">
 <table id="home_layout_columns">
 	<tr>
 		<td id="goodcloud_hearts_nonprofits">
@@ -75,4 +76,5 @@ function rotate_verbs() {
 		</td>
 	</tr>
 </table>
+</div>
 {% endblock %}
