--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -5,8 +5,22 @@
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/more.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
 {% block page_content %}
+<div class="more_buttons">
 	<a href="{% url import:list %}" class="mycelium_btn more_button data_import_btn">
 		<div class="button_title">Data Import</div>
 		<div class="button_description">Import records from other systems into GoodCloud</div>
 	</a>
+	<a href="" class="mycelium_btn more_button account_button">
+		<div class="button_title">Account</div>
+		<div class="button_description">Update billing and account information</div>
+	</a>
+	<a href="#" class="mycelium_btn more_button users_button">
+		<div class="button_title">Users</div>
+		<div class="button_description">Create, edit, and set access for user accounts</div>
+	</a>
+	<a href="{% url logo_maker:list_logos %}" class="mycelium_btn more_button logo_button">
+		<div class="button_title">Logos</div>
+		<div class="button_description">Download resized versions of your logo for other sites</div>
+	</a>
+</div>
 {% endblock %}
