moving source images, bundling selenium, creating selenium test command

--- a/mycelium/apps/reports/templates/reports/detail.html
+++ b/mycelium/apps/reports/templates/reports/detail.html
@@ -46,7 +46,7 @@
 		</span>
 	</div>
 	<div class="new_criterium">
-		<a href="#" class="mycelium_btn mycelium_grey myelium_small_btn">Add new criteria</a>
+		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
 	</div>
 </div>
 
