--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -22,20 +22,20 @@
 		<tr>
 			<td class="name"		><a href="{% url reports:report_detail 1 %}" >Thursday Volunteer List</a></td>
 			<td class="count"		>53 people</td>
-			<td class="view_results"><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
-			<td class="download_csv"><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
+			<td class="view_results"><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
+			<td class="download_csv"><a href="#" class="mycelium_btn mycelium_small_btn">Download CSV</a></td>
 		</tr>
 		<tr>
 			<td class="name"		><a href="{% url reports:report_detail 1 %}" >2010 Monthly Donors</a></td>
 			<td class="count"		class="name"		>162 people</td>
-			<td class="view_results"class="name"		><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
-			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
+			<td class="view_results"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
+			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">Download CSV</a></td>
 		</tr>
 		<tr>
 			<td class="name"		><a href="{% url reports:report_detail 1 %}" >Active Email Subscriptions</a></td>
 			<td class="count"		class="name"		>1,354 people</td>
-			<td class="view_results"class="name"		><a href="#" class="mycelium_btn myelium_small_btn">View Results</a></td>
-			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn myelium_small_btn">Download CSV</a></td>
+			<td class="view_results"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">View Results</a></td>
+			<td class="download_csv"class="name"		><a href="#" class="mycelium_btn mycelium_small_btn">Download CSV</a></td>
 		</tr>		
 	</table>
 </div>
