--- a/mycelium/apps/people/templates/people/_search_results.html
+++ b/mycelium/apps/people/templates/people/_search_results.html
@@ -4,12 +4,19 @@
 <table class="results_table">
 	<tr class="person_row header">
 		<th class="name">Name</th>
+		<th class="email">Email</th>
 		<th class="phone_number">Phone Number</th>
 	</tr>
 {% for p in people %}
 	<tr class="result_row person_row">
-		<td class="name"><a href="{% url people:person p.pk %}" class="highlightable">{{p.full_name}}</a></td>
-		<td class="phone_number highlightable">{{p.primary_phone_number}}</td>
+		<td class="name">
+			<a href="{% url people:person p.pk %}" class="highlightable">
+				<icon class="{{p.contact_type}}" ></icon>
+				{{p.full_name}}
+			</a>
+		</td>
+		<td class="email highlightable {% if p.primary_email.is_best_contact_method %}best_contact{% endif %}">{{p.primary_email}}</td>
+		<td class="phone_number highlightable {% if p.primary_phone_number.is_best_contact_method %}best_contact{% endif %}">{{p.primary_phone_number}}</td>
 	</tr>
 {% endfor %}
 	<tr><td colspan="2">
