--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -23,7 +23,7 @@ function update_search() {
 	  data: {'q':q},
 	  mode: 'abort',
 	  success: function(json) {
-		$(".search_results").html(json.html);
+		$("search_results").html(json.html);
 		highlight_search_terms(q);
 		update_stripes();
 	 },
@@ -72,7 +72,7 @@ function open_if_only_result(e) {
 	<a href="{% url people:new_person %}" class="new_person_btn mycelium_btn">New Person</a>
 	<label for="id_search_query">Search:</label> <input name="search_query" id="id_search_query" />
 </div>
-<div class="search_results">
+<search_results>
 	{% include "people/_search_results.html" %}
-</div>
+</ search_results>
 {% endblock %}
