revised reports mockup to have different mockup pages

--- a/media/css/reports.css
+++ b/media/css/reports.css
@@ -28,7 +28,7 @@ input:focus {
 .criterium {
 	margin: 2px 0px;
 }
-.criterium .tense {
+.criterium .additive {
 	padding-left: 6px;
 /*	padding-left: 18px;*/
 /*	background: url("../images/bullet-grey-8.png");*/
