--- a/mycelium/apps/reports/templates/reports/detail_donors.html
+++ b/mycelium/apps/reports/templates/reports/detail_donors.html
@@ -7,42 +7,34 @@
 </script>
 {% endblock %}
 {% block page_content %}
+<breadcrumb><a class="mycelium_btn" href="{% url reports:search %}">Back to All Reports</a></breadcrumb>
 <div class="right_actions">
-	<a href="#" class="mycelium_btn">Save Report</a>
+	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>Unsaved Report</div>
+<div class="title"><img src="{{MEDIA_URL}}images/report-32.png"/>2010 Monthly Donors</div>
 
 <div class="setup_phrase">Find all of the people who:</div>
 <div class="criteria_list">
 	<div class="criterium">
+		<span class="additive">have</span>
+		<span class="tense">at least</span>
+		<span class="negator"></span>
+		<span class="left_side">1 donation</span>
+		<span class="operator">every</span>
+		<span class="right_side">
+			<span class="value">month</span>
+			<span class="units"></span>
+		</span>
+	</div>
+	<div class="criterium">
 		<span class="additive"></span>
-		<span class="tense">have</span>
-		<span class="negator"></span>
-		<span class="left_side">donated</span>
-		<span class="operator">in the last</span>
+		<span class="tense"></span>
+		<span class="negator">only</span>
+		<span class="left_side">include</span>
+		<span class="operator">things in calendar year</span>
 		<span class="right_side">
-			<span class="value">6</span>
-			<span class="units">months</span>
-		</span>
-	</div>
-	<div class="criterium">
-		<span class="tense">are</span>
-		<span class="negator"></span>
-		<span class="left_side"></span>
-		<span class="operator">more than</span>
-		<span class="right_side">
-			<span class="value">30</span>
-			<span class="units">years old</span>
-		</span>
-	</div>
-	<div class="criterium">
-		<span class="tense">have</span>
-		<span class="negator">not</span>
-		<span class="left_side">had a volunteer shift</span>
-		<span class="operator">in the last</span>
-		<span class="right_side">
-			<span class="value"></span>
-			<span class="units">year</span>
+			<span class="value">2010</span>
+			<span class="units"></span>
 		</span>
 	</div>
 	<div class="new_criterium">
@@ -59,7 +51,7 @@
 	<div class="column"><input type="checkbox" id="id_phone"><label for="id_phone">Phone</label></div>
 	<div class="column"><input type="checkbox" id="id_last_volunteer"><label for="id_last_volunteer">Last Volunteer Shift</label></div>
 	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_month"><label for="id_no_volunteer_hrs_month">Number of volunteer hours this month</label></div>
-	<div class="column"><input type="checkbox" checked id="id_no_volunteer_hrs_year"><label for="id_no_volunteer_hrs_year">Number of volunteer hours this year</label></div>	
+	<div class="column"><input type="checkbox" id="id_no_volunteer_hrs_year"><label for="id_no_volunteer_hrs_year">Number of volunteer hours this year</label></div>	
 </div>
 
 <div class="sample_results">
@@ -70,7 +62,6 @@
 		<th>First Name</th>
 		<th>Last Name</th>
 		<th>Email</th>
-		<th>Number of volunteer hours this year</th>
 	</tr>
 	{% with people|slice:"5" as five_people %}
 	{% for p in five_people %}
@@ -79,7 +70,6 @@
 		<td>{{p.first_name}}</td>
 		<td>{{p.last_name}}</td>
 		<td>{{p.primary_email}}</td>
-		<td>{{hours|random}}</td>
 	</tr>
 	{% endfor %}
 	{% endwith %}
@@ -87,7 +77,7 @@
 	{% if remainder > 0 %}
 	<tr>
 		<td colspan="9999" class="remainder_count">
-			and {{remainder|intcomma}} more people.
+			and {{157|intcomma}} more people.
 		</td>
 	</tr>
 	{% endif %}
