tests are passing! changed non-profit to nonprofit

--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -59,7 +59,7 @@ function rotate_verbs() {
 				</span>
 			</div>
 
-			<div class="nonprofits">non-profits.</div>
+			<div class="nonprofits">nonprofits.</div>
 		</td>
 		<td id="home_right_content">
 			{% placeholder home_content %}
