HTML5. Welcome to the future.

--- a/media/css/import.css
+++ b/media/css/import.css
@@ -68,6 +68,7 @@ page_title {
 	border-radius: 30px;
 	-moz-border-radius: 30px;
 	-webkit-border-radius: 30px;
+	line-height: 44px;
 	margin-top: -6px;
 }
 
