--- a/media/css/people.css
+++ b/media/css/people.css
@@ -35,6 +35,7 @@ input:focus {
 .main_search_box {
 	text-align: left;
 	margin-left: 6px;
+	position: relative;
 }
 .main_search_box .new_person_btn {
 	margin-top: 10px;
@@ -44,6 +45,10 @@ input:focus {
 
 .main_search_box label {
 	font-size: 24px;
+	margin-top: 10px;
+	display: block;
+	float: left;
+	margin-right: 6px;
 }
 .search_results {
 	width: 100%;
@@ -224,6 +229,9 @@ input:focus {
 .basic_info .name_phone_email .name .generic_editable_field input {
 	min-width: 20%;
 }
+.basic_info .name_phone_email .name .generic_field_label {
+	margin-top: 5px;
+}
 
 .basic_info .name_phone_email .generic_editable_field input {
 	min-width: 30%;
@@ -321,6 +329,9 @@ input:focus {
 .volunteer_shift_table {
 	width: 100%;
 	margin-bottom: 20px;
+}
+.volunteer_shift_table td {
+	padding: 1px;
 }
 .volunteer_shift_table tr.even td {
 	background-color: #F2F2F2;
