--- a/mycelium/apps/import/templates/import/list.html
+++ b/mycelium/apps/import/templates/import/list.html
@@ -1,7 +1,7 @@
 {% extends "import/base.html" %}
 {% load humanize %}
 {% block title %}Data Import - History{% endblock %}
-{% block head %}{{block.super}}
+{% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 
 </script>
