--- a/mycelium/apps/import/templates/import/start.html
+++ b/mycelium/apps/import/templates/import/start.html
@@ -1,7 +1,7 @@
 {% extends "import/base.html" %}
 {% load humanize %}
 {% block title %}Data Import - Start a New Data Import{% endblock %}
-{% block head %}{{block.super}}
+{% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 
 </script>
