--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -1,7 +1,7 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n cache cms_tags menu_tags %}
 {% block title %}GoodCloud: {% page_attribute page_title %}{% endblock %}
-{% block head %}{{block.super}}
+{% block css %}{{block.super}}
 <!--[if lt IE 8]>
 <style type="text/css" media="screen">
 	#footer {
@@ -9,6 +9,8 @@
 	}
 </style>
 <![endif]-->
+{% endblock %}
+{% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 $(function(){
 	{% if posted %}
