--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -1,7 +1,7 @@
 {% extends "mycelium_base.html" %}
 {% load i18n generic_fields friendly_data_formatting %}
 {% block title %}More Tools - Data Import, Account Settings, and more{% endblock %}
-{% block head %}{{block.super}}
+{% block css %}{{block.super}}
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/more.css" type="text/css" media="screen" title="" charset="utf-8">
 {% endblock %}
 {% block page_content %}
