--- a/mycelium/apps/people/templates/people/search.html
+++ b/mycelium/apps/people/templates/people/search.html
@@ -1,6 +1,6 @@
 {% extends "people/base.html" %}
 {% block title %}People - Search{% endblock %}
-{% block head %}{{block.super}}
+{% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8">
 $(function(){
 	$('#id_search_query').toggleVal({populateFrom:"custom", text:"Type in a name, phone number, or email..."}).addClass("prefilled");
