--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -1,21 +1,46 @@
-{% load i18n cache analytics %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+{% load i18n cache analytics %}<!doctype html> 
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>{% block title %}{% endblock %}</title>
-
-	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.js"> </script>
-	<script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
-	<link rel="shortcut icon" href="{{FAVICON_URL}}" />
 {% block head %}
-	<link rel="stylesheet" href="{{ MEDIA_URL }}css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>{% block title %}{% endblock %}</title>
+  <meta name="description" content="GoodCloud">
+  <meta name="author" content="GoodCloud - Software for Nonprofits">
+  {# <!--  Mobile viewport optimized: j.mp/bplateviewport --> #}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="{{FAVICON_URL}}">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css?v=2">
+  <link rel="stylesheet" href="{{ MEDIA_URL }}css/main.css" type="text/css" media="screen" title="" charset="utf-8">
+  {# <!--	Uncomment if you are specifically targeting less enabled mobile browsers   --> #}
+  {# <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2"> #}
+  {% block css %}{% endblock %}
+  <script src="{{MEDIA_URL}}js/libs/modernizr-1.6.min.js"></script>
 {% endblock %}
-	
 </head>
 {% block body %}<body {% block extra_body %}{% endblock %} env="{{ENV}}">
 	{% block content %}
 
 	{% endblock %}
+	
+{% block javascript %}
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+  <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery-ui.js"> </script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="{{MEDIA_URL}}js/contrib/jquery.js"%3E%3C/script%3E'))</script>
+  <script src="{{MEDIA_URL}}js/plugins.js"></script>
+  <script src="{{MEDIA_URL}}js/script.js"></script>
+  <!--[if lt IE 7 ]>
+    <script src="{{MEDIA_URL}}js/libs/dd_belatedpng.js"></script>
+    <script> DD_belatedPNG.fix('img, .png_bg');
+  <![endif]-->
+
+{% endblock %}
 {% if ENV != "DEV" and not user.is_staff %}{% analytics %}
 {% include "owa/_analytics.html" %}
 {% endif %}
