--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
-{% block head %}{{block.super}}
+{% block css %}{{block.super}}
 <link rel="stylesheet" href="{{ MEDIA_URL }}css/mycelium_elements.css" type="text/css" media="screen" title="" charset="utf-8">
+{% endblock %}
+{% block javascript %}{{block.super}}
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.scrollTo-min.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.toggleval.js"> </script>
 <script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/contrib/jquery.hotkeys-0.7.9.min.js"> </script>
