--- a/media/css/import.css
+++ b/media/css/import.css
@@ -94,3 +94,6 @@ page_title {
 	font-size: 18px;
 	padding: 5px;
 }
+table.import_fields_confirmation td, table.import_fields_confirmation  th {
+	text-align: center;
+}
